# rustinpieces

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  CONTRIBUTORS.html  Cargo.toml  LICENSE  README.md  index.html  print.html  pyproject.toml  requirements-dev.txt  searcher-09f2665d.js  searchindex-bc5f912e.js  searchindex-d0760002.js  searchindex.js  searchindex.json  setup.html  toc-6b537ae7.js  toc.html  toc.js
.github/workflows/: book.yml  testing.yml
book/: README.md  book.toml
book/src/: CONTRIBUTORS.md  SUMMARY.md  setup.md
book/src/introduction/: _index.md  introduction.md  learning.md
book/src/pieces/: _index.md  hello-world.md  pieces.md
ci/: docker-compose.yml  init.sql  prep_tests.sh
introduction/: _index.html  how-to-read.html  introduction.html  learning.html  why-rust.html
pieces/: _index.html  hello-world.html  pieces.html
pieces/age_groups_csv/: README.md
pieces/age_groups_csv/python/: main.py  test_main.py
pieces/datetime_parsing_csv/: README.md
pieces/datetime_parsing_csv/python/: main.py
pieces/hello_world/: README.md
pieces/hello_world/rust/: Makefile
pieces/intro/: README.md  _index.html  dicts_vs_hashmaps.html  enumerate.html  lambdas_vs_closures.html  list_comprehensions_vs_map.html  protocols_traits.html  sets_vs_hashsets.html  single_line_if_else.html  tuple_unpacking.html  zip.html
pieces/intro/python/: main.py
pieces/intro/rust/: Cargo.toml
pieces/meilisearch_with_cli/: README.md  docker-compose.yml  search_benchmark.sh
pieces/meilisearch_with_cli/python/: main.py  pyproject.toml
pieces/mock_data/: README.md
pieces/mock_data/python/: main.py  requirements.txt  test_main.py
pieces/parallel_processing_intro/: .gitignore  README.md
pieces/parallel_processing_intro/python/: main.py  test_main.py
pieces/parallel_processing_intro/rust/: Cargo.toml
pieces/parallel_processing_intro/rust/src/: main.rs
pieces/parallelism/: README.md
pieces/parallelism/data/: articles1.csv  articles3.csv
pieces/parallelism/python/: README.md  main.py  requirements.txt  test_main.py
pieces/parallelism/rust/: Makefile
pieces/postgres_etl/: .env.example  .gitignore  README.md
pieces/postgres_etl/python/: .env.example  requirements.txt  test_main.py
pieces/postgres_etl/rust/: .env.example
pieces/postgres_etl/sql/: init.sql
pieces/regex_json/: README.md
pieces/regex_json/python/: main.py
pieces/rest_api_postgres/: .env.example  README.md
pieces/rest_api_postgres/python/: Makefile  create_admin_user.py  pyproject.toml  requirements.txt
pieces/rest_api_postgres/python/app/: config.py  db.py  deps.py  exceptions.py  router.py  security.py  utils.py
pieces/rest_api_postgres/python/app/models/: token.py  user.py
pieces/rest_api_postgres/python/app/routes/: book.py  login.py  user.py
pieces/rest_api_postgres/python/app/services/: book_service.py  user_service.py
pieces/rest_api_postgres/python/tests/: conftest.py  test_book_routes.py  test_login_routes.py
pieces/rest_api_postgres/rust/: .env.example  Cargo.toml
pieces/rest_api_postgres/rust/src/: errors.rs  main.rs
pieces/rest_api_postgres/rust/src/models/: book.rs
pieces/rest_api_postgres/rust/src/routes/: book.rs
pieces/rest_api_postgres/sql/: init.sql
pieces/simple_csv/: README.md
pieces/simple_csv/data/: city_temps.csv  city_temps_modified.csv
pieces/simple_csv/python/: main.py  test_main.py
pieces/simple_csv/rust/: Cargo.toml  README.md
python/: pyproject.toml
python/age_groups_csv/: README.md  main.py  test_main.py
python/datetime_parsing_csv/: README.md  main.py  test_main.py
python/enums/: test_main.py
python/intro/: README.md  main.py
python/mock_data/: README.md  main.py  test_main.py
python/mock_data/data/: persons.csv
python/modify_csv/: README.md  main.py  requirements.txt  test_main.py
python/modify_csv/data/: persons_modified.csv
python/postgres_etl/: .gitignore  README.md  docker-compose.yml  load_data.py  main.py  pyproject.toml  requirements.txt  test_main.py
python/postgres_etl/sql/: create_persons_table.sql
python/regex_money/: README.md  main.py  test_main.py
python/regex_money/data/: companies.json
python/regex_patterns/: README.md  main.py  test_main.py
python/regex_patterns/data/: companies.json
rust/age_groups_csv/: Cargo.toml  README.md
rust/age_groups_csv/data/: persons.csv
rust/age_groups_csv/src/: main.rs
rust/datetime_parsing_csv/: Cargo.toml  README.md
rust/datetime_parsing_csv/data/: persons_modified.csv
rust/hello_world/: Makefile  README.md
rust/intro/: README.md
rust/mock_data/: Cargo.toml  README.md
rust/mock_data/data/: persons.csv
rust/mock_data/src/: main.rs  test_main.rs
rust/modify_csv/: Cargo.toml  README.md
rust/postgres_etl/: .env.example  Cargo.toml  README.md
rust/postgres_etl/sql/: create_persons_table.sql  init.sql
rust/postgres_etl/src/: main.rs  test_main.rs
rust/regex_json/: README.md
rust/regex_money/: Cargo.toml  README.md
rust/regex_patterns/: Cargo.toml
scripts/: docker-compose.yml  prep_tests.sh
src/: SUMMARY.md  pieces.md
src/age_groups_csv/: README.md
src/datetime_parsing_csv/: .gitignore  README.md
src/hello_world/: README.md
src/intro/: README.md
src/introduction/: how-to-read.md  why-rust.md
src/meilisearch_with_cli/: README.md  docker-compose.yml
src/meilisearch_with_cli/rust/: Cargo.toml  Makefile
src/meilisearch_with_cli/rust/src/: cli.rs
src/mock_data/: README.md
src/parallelism/: .gitignore  README.md
src/postgres_etl/: README.md  docker-compose.yml
src/postgres_etl/python/: load_data.py  pyproject.toml  test_main.py
src/pyo3_mock_data/: .gitignore  Cargo.toml  Makefile  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
src/pyo3_mock_data/pyo3_mock_data/: __init__.py  _pyo3_mock_data.pyi
src/pyo3_mock_data/src/: lib.rs
src/pyo3_rayon/: Cargo.toml
src/pyo3_rayon/src/: lib.rs
src/regex_json/: README.md
src/rest_api_postgres/: .gitignore  README.md  docker-compose.yml
src/simple_csv/: README.md
theme/: extra.css
(+72 files in other folders)
