[workspace]

members = [
  "pieces/simple_csv/rust",
  "pieces/age_groups_csv/rust",
  "pieces/datetime_parsing_csv/rust",
  "pieces/hello_world/rust",
  "pieces/intro/rust",
  "pieces/meilisearch_with_cli/rust",
  "pieces/mock_data/rust",
  "pieces/postgres_etl/rust",
  "pieces/regex_json/rust",
  "pieces/parallelism/rust",
]
resolver = "2"
