[workspace]

members = [
  "src/simple_csv/rust",
  "src/age_groups_csv/rust",
  "src/datetime_parsing_csv/rust",
  "src/hello_world/rust",
  "src/intro/rust",
  "src/meilisearch_with_cli/rust",
  "src/mock_data/rust",
  "src/postgres_etl/rust",
  "src/regex_json/rust",
  "src/rest_api_postgres/rust",
  "src/parallelism/rust",
]
resolver = "2"
