[package]
name = "postgres_etl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
dotenv = "0.15.0"
postgres = "0.19.7"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.35.1", features = ["full"] }
