[package]
name = "postgres_etl"
version = "0.1.0"
edition = "2021"
default-run = "postgres_etl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
dotenvy = "0.15.7"
postgres = "0.19.7"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.35.1", features = ["full"] }
