[package]
name = "pyo3_mock_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_mock_data"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.0"
fake = { version = "2.9.2", features = ["derive"] }
pyo3 = { version = "0.23.3", features = ["extension-module"] }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
unicode-normalization = "0.1.22"
