[build-system]
requires = ["maturin>=1.0.0"]
build-backend = "maturin"

[project]
name = "prelude-parser"
requires-python = ">=3.8"

[tool.maturin]
module-name = "pyo3_mock_data._pyo3_mock_data"
binding = "pyo3"
# features = ["pyo3/extension-module"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"
fix = true

[tool.ruff.lint]
select=["E", "F", "UP", "I001", "T201", "T203"]
# Recommened ignores by ruff when using formatter
ignore=[
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
