[build-system]
requires = ["maturin>=1.5.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyo3-mock-data"
requires-python = ">=3.9"

[tool.maturin]
module-name = "pyo3_mock_data._pyo3_mock_data"
binding = "pyo3"
features = ["pyo3/extension-module"]

[tool.uv]
dev-dependencies = [
  "maturin==1.7.3",
  "mypy==1.12.0",
  "pytest==8.3.3",
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"
fix = true

[tool.ruff.lint]
select=["E", "F", "UP", "I001", "T201", "T203"]
# Recommened ignores by ruff when using formatter
ignore=[
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
