[package]
name = "pyo3_rayon"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyo3_rayon"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
pyo3 = { version = "0.20.2", features = ["abi3-py38", "extension-module"] }
rayon = "1.8.1"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
