[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meilisearch-with-cli"
description = "Meilisearch with a CLI"
requires-python = ">=3.8"
dependencies = [
  "meilisearch-python-sdk==2.6.0",
  "rich==13.7.0",
  "srsly==2.4.8",
  "typer==0.9.0",
]
version = "0.1.0"

[tool.setuptools]
py-modules = ["main"]

[project.scripts]
meilisearch-cli = "main:app"

[tool.pytest.ini_options]
meilisearch_clear_indexes = "sync"
addopts = "--meilisearch-master-key apiKey"
