[package]
name = "parallel_processing_intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
csv = "1.3.0"
fake = { version = "2.9.2", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
unicode-normalization = "0.1.22"

[dev-dependencies]
tempfile = "3.9.0"
