[package]
name = "rest_api_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
chrono = { version = "0.4.33", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
