[package]
name = "meilisearch_with_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meilisearch-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
flate2 = "1.0.28"
indicatif = "0.17.7"
lazy_static = "1.4.0"
meilisearch-sdk = "0.24.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[dev-dependencies]
tempfile = "3.9.0"
uuid = { version = "1.6.1", features = ["v4"] }
